Mon Feb 11 16:31:04 2002  Ossama Othman  <ossama@uci.edu>

	* bin/make_pretty.pl (is_warning):

	  Do not flag Fuzz's "#pragma warning(push)/(pop)" test title as a
	  warning.

Mon Feb 11 13:49:35 2002  Ossama Othman  <ossama@uci.edu>

	* bin/fuzz.pl (check_for_push_and_pop):

	  New test that verifies the number of #pragma warning(push)
	  pragmas matches the number of #pragma warning(pop) pragmas.

	* examples/IPC_SAP/SSL_SAP/SSL-client.cpp (shared_client_test): 
	* examples/IPC_SAP/SSL_SAP/SSL-client-simple.cpp
	  (shared_client_test):

	  Do not convert the buffer length to network byte order when
	  allocating the buffer.  Fixes excessive memory allocation.  This
	  was apparently a cut-n-paste bug.  Thanks to M Schulze
	  <m2.schulze@gmx.net>.

	* THANKS:

	  Added M Schulze to the Hall of Fame.

Mon Feb 11 05:42:02 2002  Balachandran Natarajan  <bala@cs.wustl.edu>

	* ace/Connector.h: Fixed a typo in the coments. Thanks to Miljenko
	  Norsic (ETK) <Miljenko.Norsic@etk.ericsson.se> for reporting
	  this. 

Sun Feb 10 16:28:30 2002  Douglas C. Schmidt  <schmidt@macarena.cs.wustl.edu>

	* ace/config-macosx.h 
	* ace/config-freebsd.h 
	* ace/config-freebsd-pthread.h
	* ace/TTY_IO.cpp:
	* TODO: Removed the ACE_USES_HIGH_BAUD_RATES macro since it no longer
	  seems to be necessary.  Thanks to Olli Savia <ops@iki.fi> for
 	  reporting this.

	* ace/TTY_IO.cpp: Replaced the two strcmp() calls with one
	  strcasecmp().  Thanks to Olli Savia <ops@iki.fi> for reporting
 	  this.

Sat Feb  9 15:17:45 2002  Balachandran Natarajan  <bala@cs.wustl.edu>

	* bin/make_release: Changed the path of gv as a new version of GV
	  was installed on deuce.doc. The old version had less colors and
	  it started mapping them to a smaller range. The graphs looked
	  very ugly. The new version fixes the problem and hence a change
	  in path.

Fri Feb  8 22:56:29 2002  Balachandran Natarajan  <bala@cs.wustl.edu>

	* ace/Log_Msg.cpp (log): Fixed a warning in TRU 64 builds.
