@@ -1,3 +1,12 @@
+Tue Feb 12 09:37:56 2002  Ossama Othman  <ossama@uci.edu>
+
+	* ACE-INSTALL.html:
+
+	  Corrected EGCS documentation.  Native exception support is now
+	  the default.  [Bug 1149]
+
+	  G++ 2.7.x is no longer supported.  Updated accordingly.
+
 Mon Feb 11 16:31:04 2002  Ossama Othman  <ossama@uci.edu>
 
 	* bin/make_pretty.pl (is_warning):
